--- a/src/ex2.html
+++ b/src/ex2.html
@@ -25,5 +25,13 @@
         <li>드레싱 재료를 믹서에 갈아줍니다.</li>
         <li>볼에 샐러드 채소와 썰어 둔 레드향, 아보카도, 토마토를 넣고 드레싱을 뿌리면 끝!</li>
     </ol>
+    <body>
+        <dl>
+            <dt>HTML</dt>
+            <dd>HTML은 Hyper Text Markup Language의 약자로 웹 문서의 구조를 설계하기 위한 목적으로 개발된 언어입니다.</dd>
+            <dt>CSS</dt>
+            <dd>CSS는 Cascading Style Sheets의 약자로 웹 문서를 꾸미기 위한 목적으로 개발된 언어입니다.</dd>
+          </dl>  
+    </body>
 </body>
 </html>
