--- a/multi.html
+++ b/multi.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <!-- <audio src="./medias/spring.mp3" autoplay loop></audio> -->
-    <video src="./medias/salad.mp4" controls width="700px"></video>
+    <video src="./medias/salad.mp4" autoplay muted width="700px"></video>
 </body>
 </html>
